deployment-plannedoffer-tst.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-plannedoffer-svc
  namespace: default
  labels:
    app: ms-plannedoffer
    service: ms-plannedoffer-svc
spec:
  selector:
    app: ms-plannedoffer
  ports:
    - port: 8080
      nodePort: 30083
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-plannedoffer-v1
  namespace: default
  labels:
    app: ms-plannedoffer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-plannedoffer
      version: v1
  template:
    metadata:
      labels:
        app: ms-plannedoffer
        version: v1
    spec:
      containers:
        - name: ms-plannedoffer
          image: fra.ocir.io/frdvdrigd38a/ms-plannedoffer:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-plannedoffer
  namespace: default
spec:
  host: ms-plannedoffer-svc
  subsets:
    - name: v1
      labels:
        version: v1
